Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-10-18 (SVN):
    * Split docs/CHANGES, moved logs up to 1.4.3-release into CHANGES.old
    * Updated 1.5.1 release notes file.
    * quakedef.h: updated beta datestamp to 2011-10-18.

2011-10-18 (SVN):
    * midi_mac.c: Tidied up.

2011-10-17 (SVN):
    * quakedef.h: updated beta datestamp to 2011-10-17.

2011-10-17 (SVN):
    * windows midi: Fixed several broken error checks. Removed irrelevant
      or dead code at several places. Renamed a lot of variables, as well
      as structure members from brain-dead winblows style to our own, so
      that I can read more easily. Changed midi-to-stream converter to use
      FS_fread() and friends, keeping the midi file open during playback:
      The old code used to load the whole midi file into hunk memory, but
      there were no 100% guarantee that the data wouldn't be overwritten
      during a level change. Therefore this is much safer. OTOH, multiple
      disk reads shouldn't be a problem even for ancient computers because
      the files are small. Changed the structures so that headers prepared
      boolean is not a single global variable any longer but is per-buffer
      now. Added missing origin and copyright headers. Possibly some other
      cleanups I forgot. More might follow later.

2011-10-17 (SVN):
    * Deleted midstuff.h. Made mid2strm.c and midi_win.c to use the new
      midifile.h header.

2011-10-17 (SVN):
    * libs/common: Added new midifile.h header for common MIDI constants
      and structures. Information is compiled from widely available open
      sources.

2011-10-14 (SVN):
    * utils Makefiles: Removed the extra "bin" directory, removed the
      DESTDIR from the makefiles and BIN_DIR from the scripts. Added
      distclean target to all makefiles. Adjusted the rpm spec file
      for the build system changes.
    * Added new ReleaseNotes-1.5.1 document. Only two entries for now,