@@ -27,6 +27,7 @@
 #include "quakedef.h"
 #include "snd_codec.h"
 #include "bgmusic.h"
+#include "cdaudio.h"
 #include "midi_drv.h"
 
 #define MIDI_DIRNAME	"midi"
