@@ -1,15 +1,0 @@
-/*
-	mididef.h
-	client midi music functions
-
-	$Id$
-*/
-
-#ifndef __MIDIDEFS_H
-#define __MIDIDEFS_H
-
-qboolean	MIDI_Init (void);
-void		MIDI_Cleanup (void);
-
-#endif	/* __MIDIDEFS_H */
-
